--- a/i_team.html
+++ b/i_team.html
@@ -158,7 +158,7 @@
 
           <ul>
 
-            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (9/2020-12/2021), MIPT <br>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (9/2020-12/2021), Moscow Institute of Physics and Technology <br>
               thesis: <a href="https://128.84.4.18/abs/2112.10645">Distributed and Stochastic Optimization Methods with Gradient Compression and Local Steps</a> <br>
                <i>current position: Postdoctoral Fellow, MILA and Université de Montréal, Canada</i>
             </li>
@@ -225,15 +225,34 @@
           <h3>Alumni:</h3>
 
           <ul>
-            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-12/2021), KAUST</li>
-            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-8/2021), KAUST</li>
-            <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-12/2020), KAUST</li>
-            <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (8/2019-12/2020), KAUST</li>
-            <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (9/2018-12/2019), KAUST</li>
-            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019), KAUST</li>
-            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018), KAUST</li>
-            <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (8/2017-12/2018), KAUST</li>
-            <li><a href="http://filiphanzely.com/">Filip Hanzely</a> (9/2016-7/2017), University of Edinburgh</li>
+
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-12/2021), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-8/2021), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://www.linkedin.com/in/alyazeed-basyoni-b62884b6">Alyazeed Basyoni</a> (8/2019-12/2020), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (8/2019-12/2020), KAUST
+                <br> <i>current position: Quantitative Researcher, IMC Trading, Chicago, USA</i> </li>
+
+            <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (9/2018-12/2019), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018), KAUST
+                <br> <i>current position: PhD Student, KAUST</i> </li>
+
+            <li><a href="https://kz.linkedin.com/in/alibek-sailanbayev">Alibek Sailanbayev</a> (8/2017-12/2018), KAUST
+                <br> <i>current position: Senior Data Analyst, National Analytical Center, Kazakhstan</i> </li>
+
+            <li><a href="http://filiphanzely.com/">Filip Hanzely</a> (9/2016-7/2017), University of Edinburgh
+                <br><i>current position: Research Assistant Professor, TTIC, Chicago, USA</i> </li>
+
           </ul>
 
           <h2> Research Interns</h2>
@@ -292,11 +311,11 @@
             <li> Sean Ryan (Edinburgh Mathematics), 2015-2016</li>
             <li><a href="https://las.inf.ethz.ch/people/mojmir-mutny">Mojmír Mutný</a> (University of Edinburgh), Summer 2015 </li>
             <li> Debadri Mukherjee (University of Edinburgh), Summer 2014</li>
-            <li><a href="https://las.inf.ethz.ch/people/mojmir-mutny">Mojmír Mutný (University of Edinburgh)</a> Summer 2014 </li>
+            <li><a href="https://las.inf.ethz.ch/people/mojmir-mutny">Mojmír Mutný</a> (University of Edinburgh) Summer 2014 </li>
             <li><a href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana Peneva</a> (University of Edinburgh), Summer 2012 </li>
-            <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz  Filipecki</a> (University of Edinburgh), Summer 2011</li>
-            <li>Edward Cumberlege (University of Edinburgh), Summer 2011 </li>
-            <li>Bartosz Filipecki (University of Edinburgh), Summer 2010 </li>
+            <li><a href="https://www.linkedin.com/in/bartosz-filipecki-24923a85/?originalSubdomain=de">Bartosz  Filipecki</a> (University of Edinburgh), Summer 2011</li>
+            <li><a href="https://www.bloomberg.com/profile/person/20168725">Edward Cumberlege</a> (University of Edinburgh), Summer 2011 </li>
+            <li><a href="https://www.linkedin.com/in/bartosz-filipecki-24923a85/?originalSubdomain=de">Bartosz Filipecki</a> (University of Edinburgh), Summer 2010 </li>
           </ul>
 
           <h2>Visitors</h2>
