--- a/i_team.html
+++ b/i_team.html
@@ -290,7 +290,7 @@
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-11/2020</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020</li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
-            <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
+            <li><a href="https://anbeznosikov.github.io">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
