--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h3>February 7, 2022</h3>
 
-<h1>Talk at the Machine Learning NeEDS Mathematical Optimization Seminar</h1>
+<h1>Talk @ Machine Learning NeEDS Mathematical Optimization Seminar</h1>
 <br>
 
 Today I am giving a talk within the <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>
