--- a/i_team.html
+++ b/i_team.html
@@ -75,6 +75,7 @@
           <h3>Current:</h3>
 
           <ul>
+            <li><a href="https://avetx.github.io/">Avetik Karagulyan</a> (11/2021-present), KAUST </li>
             <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-present), KAUST </li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present), KAUST</li>
           </ul>
