--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
         <div id="content">
 
 
+
+<h3>February 8, 2022</h3>
+
+<h1>New Paper</h1>
+<br>
+
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2202.02771">
+"Optimal Algorithms for Decentralized Stochastic Variational Inequalities"</a> -
+joint work with
+<a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>,
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a>,
+Michael Persiianov, and
+<a href="https://www.researchgate.net/profile/Alexander-Gasnikov">Alexander Gasnikov</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Variational inequalities are a formalism that includes games, minimization, saddle point, and equilibrium problems as special cases. Methods for variational inequalities are therefore universal approaches for many applied tasks, including machine learning problems. This work concentrates on the decentralized setting, which is increasingly important but not well understood. In particular, we consider decentralized stochastic (sum-type) variational inequalities over fixed and time-varying networks. We present lower complexity bounds for both communication and local iterations and construct optimal algorithms that match these lower bounds. Our algorithms are the best among the available literature not only in the decentralized stochastic case, but also in the decentralized deterministic and non-distributed stochastic cases. Experimental results confirm the effectiveness of the presented algorithms.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>February 7, 2022</h3>
 
 <h1>Talk @ Machine Learning NeEDS Mathematical Optimization Seminar</h1>
@@ -64,45 +98,45 @@ paper recently accepted to ICLR 2022.
 
 
 
-          <h3>February 2, 2022</h3>
+<h3>February 2, 2022</h3>
 
-          <h1>New Paper</h1>
-          <br>
+<h1>New Paper</h1>
+<br>
 
-          <span class="important">New paper out:</span>
-          <a href="https://arxiv.org/abs/2202.01268">
-          "Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization"</a> -
-          joint work with
-          <a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2202.01268">
+"Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization"</a> -
+joint work with
+<a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
 
-          <br>
-          <br>
-          Abstract:
-          <i>
-            We develop and analyze DASHA: a new family of methods for nonconvex
-            distributed optimization problems. When the local functions at the nodes have a finite-sum
-            or an expectation form, our new methods, DASHA-PAGE and DASHA-SYNC-MVR, improve the theoretical
-            oracle and communication complexity of the previous state-of-the-art method MARINA by
-            Gorbunov et al. (2020). In particular,
-            to achieve an $\varepsilon$-stationary point, and considering the random sparsifier RandK as an
-            example, our methods compute the optimal number of gradients
-            $O(\sqrt{m}/(\varepsilon\sqrt{n}))$ and $O(\sigma/(\varepsilon^{3/2}n))$ in finite-sum and
-            expectation form cases, respectively, while
-            maintaining the SOTA communication complexity $O(d/(\varepsilon \sqrt{n}))$. Furthermore, unlike
-            MARINA,
-            the new methods DASHA, DASHA-PAGE and DASHA-MVR send compressed vectors only and never synchronize
-            the nodes, which makes them more practical for federated learning.
-            We extend our results to the case when the functions satisfy the Polyak-Łojasiewicz condition.
-            Finally, our theory is corroborated in practice: we see a significant improvement in experiments
-            with nonconvex classification and training of deep learning models.
-          </i>
-          <br>
+<br>
+<br>
+Abstract:
+<i>
+We develop and analyze DASHA: a new family of methods for nonconvex
+distributed optimization problems. When the local functions at the nodes have a finite-sum
+or an expectation form, our new methods, DASHA-PAGE and DASHA-SYNC-MVR, improve the theoretical
+oracle and communication complexity of the previous state-of-the-art method MARINA by
+Gorbunov et al. (2020). In particular,
+to achieve an $\varepsilon$-stationary point, and considering the random sparsifier RandK as an
+example, our methods compute the optimal number of gradients
+$O(\sqrt{m}/(\varepsilon\sqrt{n}))$ and $O(\sigma/(\varepsilon^{3/2}n))$ in finite-sum and
+expectation form cases, respectively, while
+maintaining the SOTA communication complexity $O(d/(\varepsilon \sqrt{n}))$. Furthermore, unlike
+MARINA,
+the new methods DASHA, DASHA-PAGE and DASHA-MVR send compressed vectors only and never synchronize
+the nodes, which makes them more practical for federated learning.
+We extend our results to the case when the functions satisfy the Polyak-Łojasiewicz condition.
+Finally, our theory is corroborated in practice: we see a significant improvement in experiments
+with nonconvex classification and training of deep learning models.
+</i>
+<br>
 
-          <br>
-          <br>
-          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-          <br>
-          <br>
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
