--- a/i_papers.html
+++ b/i_papers.html
@@ -53,12 +53,17 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [185] Dmitry Kovalev, Aleksandr Beznosikov, Abdurakhmon Sadiev, Michael Persiianov, Peter Richtárik and Alexander Gasnikov<br>
+          <b>Optimal algorithms for decentralized stochastic variational inequalities</b><br>
+          [<a href="https://arxiv.org/abs/2202.02771">arXiv</a>] [code: Algorithm 1, Algorithm 2] <br>
+          <br>
+
           [184] Alexander Tyurin and Peter Richtárik<br>
           <b>Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization</b><br>
           [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
           <br>
 
-          [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li, and Eduard Gorbunov <br>
+          [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li and Eduard Gorbunov <br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
           [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
