--- a/i_papers.html
+++ b/i_papers.html
@@ -92,7 +92,7 @@
           <b>FL_PyTorch: optimization research simulator for federated learning</b><br>
           <a href="https://dl.acm.org/doi/pdf/10.1145/3488659.3493775">Proceedings of the 2nd ACM International Workshop on Distributed Machine Learning</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [arXiv] [code: FL_PyTorch] <br>
+          [<a href="https://arxiv.org/abs/2202.03099">arXiv</a>] [code: FL_PyTorch] <br>
           <br>
 
           [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
