--- a/i_papers.html
+++ b/i_papers.html
@@ -60,21 +60,25 @@
 
           [184] Alexander Tyurin and Peter Richtárik<br>
           <b>Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
           <br>
 
           [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li and Eduard Gorbunov <br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
 
           [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi <br>
           <b>BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2201.13320">arXiv</a>] [code: BEER] <br>
           <br>
 
           [181] Grigory Malinovsky, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Server-side stepsizes and sampling without replacement provably help in federated optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2201.11066">arXiv</a>] [code: Nastya] <br>
           <br>
 
