--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -53,6 +53,16 @@
 <h1>Video Talks</h1>
 
 <p>
+<a href="https://www.youtube.com/watch?v=QqHWl5Q_knA">"Permutation compressors for provably faster distributed nonconvex optimization"</a> (67 mins)
+<br> <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, 2/2022
+</p>
+
+<p>
+<a href="https://www.youtube.com/watch?v=rjWze5rcSUM&t=1s">"EF21: A New, Simpler, Theoretically Better, and Practically Faster Error Feedback"</a> (62 mins)
+<br> Federated Learning One World Seminar, 7/2021
+</p>
+
+<p>
 <a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">"Beyond Local and Gradient Methods for Federated Learning"</a> (80 mins)
 <br> Federated Learning One World Seminar, 4/2021
 </p>
