--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
         <div id="content">
 
 
+<h3>February 9, 2022</h3>
+
+<h1>Talk @ FLOW </h1>
+<br>
+
+I just gave a talk at the <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World (FLOW)</a>  seminar.
+I spoke about <a href="https://arxiv.org/abs/2110.03300">"Permutation compressors for provably faster distributed nonconvex optimization"</a> -
+a paper recently accepted to ICLR 2022.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 
 <h3>February 8, 2022</h3>
 
