--- a/i_talks.html
+++ b/i_talks.html
@@ -90,6 +90,10 @@ Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?se
 <h1>2022 Talks</h1>
 
 <p>
+[193] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, Virtual Seminar Series, February 9, 2022
+</p>
+
+<p>
 [192] <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, Virtual Seminar Series, February 7, 2022 (invited)
 </p>
 
