--- a/i_talks.html
+++ b/i_talks.html
@@ -74,6 +74,10 @@ Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
 <p>
+Federated Learning Workshop, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April or May 2022 (invited)
+</p>
+
+<p>
 Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invited)
 </p>
 
