--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -52,33 +52,40 @@
 
 <h1>Video Talks</h1>
 
+
+
 <p>
-<a href="https://www.youtube.com/watch?v=QqHWl5Q_knA">"Permutation compressors for provably faster distributed nonconvex optimization"</a> (67 mins)
+<a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">Permutation compressors for provably faster distributed nonconvex optimization</a> (78 mins)
+<br> <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2022">Federated Learning One World Seminar</a>, 2/2022
+</p>
+
+<p>
+<a href="https://www.youtube.com/watch?v=QqHWl5Q_knA">Permutation compressors for provably faster distributed nonconvex optimization</a> (67 mins)
 <br> <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, 2/2022
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=rjWze5rcSUM&t=1s">"EF21: A New, Simpler, Theoretically Better, and Practically Faster Error Feedback"</a> (62 mins)
-<br> Federated Learning One World Seminar, 7/2021
+<a href="https://www.youtube.com/watch?v=rjWze5rcSUM&t=1s">EF21: A New, Simpler, Theoretically Better, and Practically Faster Error Feedback</a> (62 mins)
+<br> https://sites.google.com/view/one-world-seminar-series-flow/archive/2021Federated Learning One World Seminar</a>, 7/2021
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">"Beyond Local and Gradient Methods for Federated Learning"</a> (80 mins)
-<br> Federated Learning One World Seminar, 4/2021
+<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">Beyond Local and Gradient Methods for Federated Learning</a> (80 mins)
+<br> https://sites.google.com/view/one-world-seminar-series-flow/archive/2021Federated Learning One World Seminar</a>, 4/2021
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=_1q-vt0nu44">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a>
+<a href="https://www.youtube.com/watch?v=_1q-vt0nu44">Distributed Second Order Methods with Fast Rates and Compressed Communication</a>
 <br> All Russian Optimization Seminar, 4/2021
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">"On Second Order Methods and Randomness"</a> (72 mins)
+<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">On Second Order Methods and Randomness</a> (72 mins)
 <br> Montreal MLOpt Seminar, 5/2020
 </p>
 
 <p>
-<a href="https://www.youtube.com/watch?v=HGQkct3db-c">"On Second Order Methods and Randomness"</a> (73 mins)
+<a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a> (73 mins)
 <br> One World Optimization Seminar, 4/2020
 </p>
 
