--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,12 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [186] Konstantin Mishchenko, Grigory Malinovsky, Sebastian Stich and Peter Richtárik<br>
+          <b>ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="papers/ProxSkip.pdf">preprint</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
+          <br>
+
           [185] Dmitry Kovalev, Aleksandr Beznosikov, Abdurakhmon Sadiev, Michael Persiianov, Peter Richtárik and Alexander Gasnikov<br>
           <b>Optimal algorithms for decentralized stochastic variational inequalities</b><br>
           [<a href="https://arxiv.org/abs/2202.02771">arXiv</a>] [code: Algorithm 1, Algorithm 2] <br>
