--- a/i_talks.html
+++ b/i_talks.html
@@ -74,7 +74,7 @@ Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
 <p>
-Federated Learning Workshop, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April or May 2022 (invited)
+Federated Learning Workshop, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
 </p>
 
 <p>
@@ -85,13 +85,13 @@ Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invite
 Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
 </p>
 
-<p>
-Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
-</p>
-
 
 
 <h1>2022 Talks</h1>
+
+<p>
+[194] Dagstuhl Seminar, 3 talks, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
+</p>
 
 <p>
 [193] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, Virtual Seminar Series, February 9, 2022
