--- a/i_talks.html
+++ b/i_talks.html
@@ -74,12 +74,18 @@ Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
 <p>
-Federated Learning Workshop, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
+Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
+speakers: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
 </p>
 
 <p>
 Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invited)
 </p>
+
+<p>
+AMCS/STAT Graduate Seminar, KAUST, March 31, 2022 (invited)
+</p>
+
 
 <p>
 Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
