--- a/i_talks.html
+++ b/i_talks.html
@@ -58,11 +58,7 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 1-
 </p>
 
 <p>
-  <a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited)
-</p>
-
-<p>
-PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
+<a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited)
 </p>
 
 <p>
@@ -74,8 +70,15 @@ Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
 <p>
+PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria, May 30-June 3, 2022 (invited)
+</p>
+
+<p> Workshop on Stochastic Numerics, Statistical Learning, Optimization, Approximations, with Applications. KAUST, Saudi Arabia, May 15-28, 2022 (invited)
+</p>
+
+<p>
 Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
-speakers: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
+talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
 </p>
 
 <p>
@@ -85,7 +88,6 @@ Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invite
 <p>
 AMCS/STAT Graduate Seminar, KAUST, March 31, 2022 (invited)
 </p>
-
 
 <p>
 Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
