--- a/i_talks.html
+++ b/i_talks.html
@@ -62,6 +62,10 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 1-
 </p>
 
 <p>
+<a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022 
+</p>
+
+<p>
 Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
