--- a/i_talks.html
+++ b/i_talks.html
@@ -62,7 +62,11 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 1-
 </p>
 
 <p>
-<a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022 
+<a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022
+</p>
+
+<p>
+<a href="https://orcos.tuwien.ac.at/events/vc2022/">15th Viennese Conference on Optimal Control and Dynamic Games</a>, Session: Continuous Optimization: Theory and Applications (organized by Bot and Daniilidis), Vienna, Austria, July 12-15, 2022 (invited)
 </p>
 
 <p>
