--- a/i_talks.html
+++ b/i_talks.html
@@ -74,6 +74,10 @@ Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
 </p>
 
 <p>
+PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="https://fmph.uniba.sk">Faculty of Mathematics, Physics and Informatics</a>, Comenius University, Bratislava, Slovakia, June 20-24, 2022
+</p>
+
+<p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
 </p>
 
