--- a/i_talks.html
+++ b/i_talks.html
@@ -94,7 +94,7 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 </p>
 
 <p>
-Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invited)
+<a href="https://web.cvent.com/event/80bd6440-6758-4bd2-a612-214f7fe04252/summary?rt=570L8DJEKUSneITWTFOAWw">Apple's Workshop on Privacy Preserving Machine Learning</a>, April 5-6, 2022 (invited)
 </p>
 
 <p>
