--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         <div id="content">
 
 
+<h3>February 20, 2022</h3>
+
+<h1>Dagstuhl</h1>
+
+As of today, and until February 25, I am at Dagstuhl, Germany, attending a Seminar on
+ the <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>.
+
+ <br>
+
+
+ <br>
+ <br>
+ <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+ <br>
+ <br>
+
 
 <h3>February 19, 2022</h3>
 
@@ -53,7 +69,7 @@
 <br>
 
 <span class="important">New paper out:</span>
-<a href="papers/ProxSkip.pdf">
+<a href="https://arxiv.org/abs/2202.09357">
 "ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!"</a> -
 joint work with
 <a href="https://konstmish.github.io/">Konstantin Mishchenko</a>,
