--- a/index.html
+++ b/index.html
@@ -44,6 +44,49 @@
         <div id="content">
 
 
+
+
+
+
+<h3>March 13, 2022</h3>
+
+<h1>Rising Stars in AI Symposium at KAUST</h1>
+
+The <a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022">Rising Stars in AI Symposium</a> is taking place at KAUST during March 13-15, 2022. This event is organized by
+KAUST's <a href="https://cemse.kaust.edu.sa/ai">AI Initiative</a>, led by <a href="https://cemse.kaust.edu.sa/ai/people/person/jurgen-schmidhuber">Jürgen Schmidhuber</a>.
+Several people from my team are giving talks: <a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a>, <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>,
+<a href="https://k3nfalt.github.io">Alexander Tyurin</a>, <a href="https://elnurgasanov.com">Elnur Gasanov</a>, <a href="https://mher-safaryan.github.io">Mher Safaryan</a>,
+<a href="https://shulgin-egor.github.io">Egor Shulgin</a>, <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://zhizeli.github.io">Zhize Li</a>. My former PhD
+student <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> is also giving a talk.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+
+<h3>March 12, 2022</h3>
+
+<h1>Back to KAUST</h1>
+
+After spending a few weeks in Europe, I have just arrived back to KAUST.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>February 20, 2022</h3>
 
 <h1>Dagstuhl</h1>
