--- a/i_talks.html
+++ b/i_talks.html
@@ -88,6 +88,10 @@ PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Gradua
 <p> Workshop on Stochastic Numerics, Statistical Learning, Optimization, Approximations, with Applications. KAUST, Saudi Arabia, May 15-28, 2022 (invited)
 </p>
 
+<p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
+Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited lecture)
+</p>
+
 <p>
 Lagrange Workshop on Federated Learning, <a href="https://www.lmcrc.fr/#/meeting">Lagrange Mathematics and Computing Research Center</a>, virtual meeting, April 25, 2022 (invited)
 talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, Martin Jaggi, Peter Kairouz
