--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -52,7 +52,10 @@
 
 <h1>Video Talks</h1>
 
-
+<p>
+<a href="https://recorder-v3.slideslive.com/?share=64408&s=28e788a7-dbab-47c8-b882-f2381c5d7689">Permutation compressors for provably faster distributed nonconvex optimization</a> (5 mins)
+<br> ICLR video talk, 3/2022
+</p>
 
 <p>
 <a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">Permutation compressors for provably faster distributed nonconvex optimization</a> (78 mins)
