--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <h1>Rising Stars in AI Symposium at KAUST</h1>
 
-The <a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022">Rising Stars in AI Symposium</a> is taking place at KAUST during March 13-15, 2022. This event is organized by
+A <a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022">Rising Stars in AI Symposium</a> is taking place at KAUST during March 13-15, 2022. This event is organized by
 KAUST's <a href="https://cemse.kaust.edu.sa/ai">AI Initiative</a>, led by <a href="https://cemse.kaust.edu.sa/ai/people/person/jurgen-schmidhuber">Jürgen Schmidhuber</a>.
 Several people from my team are giving talks: <a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a>, <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>,
 <a href="https://k3nfalt.github.io">Alexander Tyurin</a>, <a href="https://elnurgasanov.com">Elnur Gasanov</a>, <a href="https://mher-safaryan.github.io">Mher Safaryan</a>,
