--- a/i_teaching.html
+++ b/i_teaching.html
@@ -83,9 +83,17 @@
 
 
 
-<h1>External (Summer / Winter Doctoral Schools) </h1>
+<h1>External (e.g., Summer / Winter Doctoral Schools) </h1>
 
 <ul>
+
+<li>
+1-DAV-213: Introduction to Stochastic Gradient Descent Methods (5 x 4.5 hours)<br>
+School of Mathematics, Physics and Informatics (Comenius University), Slovakia, June 20-24, 2022 <br>
+If you are from FMFI UK, register for the course via <a href="piazza.com/fmph.uniba.sk/summer2022/1dav213">Piazza</a> using your fmph.uniba.sk email address.
+Otherwise, I will register you manualy after you send an email to me.
+</li>
+
 
 <li>  A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods (6 hours) <br>
 Event:   <a          href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT 2019 Summer School</a>, Berlin, Germany, August 2019 <br>
