--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -69,12 +69,12 @@
 
 <p>
 <a href="https://www.youtube.com/watch?v=rjWze5rcSUM&t=1s">EF21: A New, Simpler, Theoretically Better, and Practically Faster Error Feedback</a> (62 mins)
-<br> https://sites.google.com/view/one-world-seminar-series-flow/archive/2021Federated Learning One World Seminar</a>, 7/2021
+<br> <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021">Federated Learning One World Seminar</a>, 7/2021
 </p>
 
 <p>
 <a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">Beyond Local and Gradient Methods for Federated Learning</a> (80 mins)
-<br> https://sites.google.com/view/one-world-seminar-series-flow/archive/2021Federated Learning One World Seminar</a>, 4/2021
+<br> <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021">Federated Learning One World Seminar</a>, 4/2021
 </p>
 
 <p>
