--- a/i_teaching.html
+++ b/i_teaching.html
@@ -90,7 +90,7 @@
 <li>
 1-DAV-213: Introduction to Stochastic Gradient Descent Methods (5 x 4.5 hours)<br>
 School of Mathematics, Physics and Informatics (Comenius University), Slovakia, June 20-24, 2022 <br>
-If you are from FMFI UK, register for the course via <a href="piazza.com/fmph.uniba.sk/summer2022/1dav213">Piazza</a> using your fmph.uniba.sk email address.
+If you are from FMFI UK, register for the course via <a href="https://piazza.com/fmph.uniba.sk/summer2022/1dav213">Piazza</a> using your fmph.uniba.sk email address.
 Otherwise, I will register you manualy after you send an email to me.
 </li>
 
