--- a/i_papers.html
+++ b/i_papers.html
@@ -645,7 +645,7 @@
 
           [97] Nicolas Loizou and Peter Richtárik<br>
           <b>Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</b><br>
-          <a href="https://ieeexplore.ieee.org/document/9539193">IEEE Transactions on Information Theory 67:12, 2021 </a><br>
+          <a href="https://ieeexplore.ieee.org/document/9539193">IEEE Transactions on Information Theory 67(12):8300--8324, 2021 </a><br>
           [<a href="https://arxiv.org/abs/1905.08645">arXiv</a>]<br>
           <br>
 
