--- a/i_team.html
+++ b/i_team.html
@@ -82,9 +82,14 @@
           </ul>
 
 
-          <h2>PhD Students </h2>
+          <h2>PhD Students</h2>
 
           <ul>
+
+            <li><a href="https://kaiyi.me">Kai Yi</a> (1/2022-present), KAUST
+              <a href="https://scholar.google.com/citations?user=r08j39wAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (1/2022-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=4w2W9KQAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
