--- a/i_talks.html
+++ b/i_talks.html
@@ -102,16 +102,18 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 </p>
 
 <p>
-AMCS/STAT Graduate Seminar, KAUST, March 31, 2022 (invited)
+<a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
 </p>
 
-<p>
-Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
-</p>
+
 
 
 
 <h1>2022 Talks</h1>
+
+<p>
+[195] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
+</p>
 
 <p>
 [194] Dagstuhl Seminar, 3 talks, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
