--- a/i_team.html
+++ b/i_team.html
@@ -349,7 +349,7 @@
             <li><a href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob Kisiala</a> (2015), University of Edinburgh  (<a href="https://arxiv.org/abs/1511.00140">MS thesis</a>)
               <br> <i> current position: Model Risk Data Scientist, NatWest Group, Edinburgh, United Kingdom </i> </li>
 
-            <li><a href="https://scholar.google.com/citations?user=P7w0woAAAAAJ&hl=en">Arefin Md. Rajib</a> (2015), University of Edinburgh
+            <li><a href="https://scholar.google.com/citations?user=P7w0woAAAAAJ&hl=en">Md. Rajib Arefin</a> (2015), University of Edinburgh
                 <br> <i>current position:  Assistant Professor, Dept of Mathematics, University of Dhaka, Bangladesh </i> </li>
 
               <li>Yijun Zheng (2015), University of Edinburgh </li>
