--- a/index.html
+++ b/index.html
@@ -44,7 +44,49 @@
         <div id="content">
 
 
+<h3>March 24, 2022</h3>
 
+<h1>Transactions on Machine Learning Research</h1>
+
+<a href="https://jmlr.org/tmlr/index.html">Transactions on Machine Learning Research</a> is a new venue for the dissemination of
+machine learning research. Your truly is one of a large number (approx 200) of <a href="https://jmlr.org/tmlr/editorial-board.html">Action
+  Editors</a> handling the submissions. You can read <a href="https://jmlr.org/tmlr/ae-guide.html">here</a> in detail what
+the responsibilities of an Action Editor are.<br> <br>
+
+
+An excerpt from the TMLR website: <i>"TMLR emphasizes technical correctness over subjective significance, to ensure that we facilitate scientific discourse on topics that are deemed less significant by contemporaries but may be important in the future. TMLR caters to the shorter format manuscripts that are usually submitted to conferences, providing fast turnarounds and double blind reviewing. We employ a rolling submission process, shortened review period, flexible timelines, and variable manuscript length, to enable deep and sustained interactions among authors, reviewers, editors and readers. This leads to a high level of quality and rigor for every published article.
+TMLR does not accept submissions that have any overlap with previously published work. TMLR maximizes openness and transparency by hosting the review process on OpenReview."</i>
+<br> <br>
+
+I have high hopes that TMLR will combine the benefits of a fast conference-like publication process with the high reviewing standards of journals.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>March 21, 2022</h3>
+
+<h1>Talk on PermK at the CS Graduate Seminar at KAUST</h1>
+
+Today I have a talk about "Permutation compressors for provably faster distributed nonconvex optimization"
+at the <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a> here at KAUST. The talk is based on
+joint paper with <a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> and <a href="https://k3nfalt.github.io/">Alexander Tyurin</a> recently accepted to <a href="https://iclr.cc">ICLR 2022</a>. I gave the same talk at the Federated Learning One World (FLOW) seminar in February; this one was recorded and is on <a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">YouTube</a>.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
