--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 
 <h3>March 24, 2022</h3>
 
-<h1>Transactions on Machine Learning Research</h1>
+<h1>Transactions on Machine Learning Research Accepting Submissions!</h1>
 
 <a href="https://jmlr.org/tmlr/index.html">Transactions on Machine Learning Research</a> is a new venue for the dissemination of
-machine learning research. Your truly is one of a large number (approx 200) of <a href="https://jmlr.org/tmlr/editorial-board.html">Action
-  Editors</a> handling the submissions. You can read <a href="https://jmlr.org/tmlr/ae-guide.html">here</a> in detail what
-the responsibilities of an Action Editor are.<br> <br>
+machine learning research. Your truly is one of a large number (approx 150) of <a href="https://jmlr.org/tmlr/editorial-board.html">Action
+  Editors</a>. You can read <a href="https://jmlr.org/tmlr/ae-guide.html">here</a> in detail what
+the responsibilities of an Action Editor are. We are delighted to let you know that TMLR is now <a href="https://jmlr.org/tmlr/news/2022/launch.html">accepting submissions!</a>
+<br> <br>
 
 
 An excerpt from the TMLR website: <i>"TMLR emphasizes technical correctness over subjective significance, to ensure that we facilitate scientific discourse on topics that are deemed less significant by contemporaries but may be important in the future. TMLR caters to the shorter format manuscripts that are usually submitted to conferences, providing fast turnarounds and double blind reviewing. We employ a rolling submission process, shortened review period, flexible timelines, and variable manuscript length, to enable deep and sustained interactions among authors, reviewers, editors and readers. This leads to a high level of quality and rigor for every published article.
